Z-index problem of the NavBarMobile has been fixed

--- a/frontend/src/components/NavBarMobile/css/NavBarMobile.module.scss
+++ b/frontend/src/components/NavBarMobile/css/NavBarMobile.module.scss
@@ -15,6 +15,7 @@
     height: 100vh;
     align-items: flex-start;
     box-shadow: none;
+    z-index: 999;
   }
 
   .navBarHeader {
